Fix - theme disables pinch-to-zoom on mobile
https://3.basecamp.com/5798509/buckets/37499979/card_tables/cards/9720370800

--- a/assets/css/buddypress.css
+++ b/assets/css/buddypress.css
@@ -705,6 +705,38 @@ body .buddypress-wrap form.bp-messages-search-form input[type="search"],
     border-width: 1px;
 }
 
+@supports (-webkit-touch-callout: none) {
+    @media (hover: none) and (pointer: coarse) {
+        body .buddypress-wrap .subnav-filters .component-filters select,
+        body .buddypress-wrap .subnav-filters .last select,
+        .buddypress-wrap select,
+        #buddypress.buddypress-wrap form#whats-new-form #whats-new-options select,
+        .buddypress-wrap .standard-form textarea,
+        .buddypress-wrap .standard-form input[type="text"],
+        .buddypress-wrap .standard-form input[type="color"],
+        .buddypress-wrap .standard-form input[type="date"],
+        .buddypress-wrap .standard-form input[type="datetime"],
+        .buddypress-wrap .standard-form input[type="datetime-local"],
+        .buddypress-wrap .standard-form input[type="email"],
+        .buddypress-wrap .standard-form input[type="month"],
+        .buddypress-wrap .standard-form input[type="number"],
+        .buddypress-wrap .standard-form input[type="search"],
+        .buddypress-wrap .standard-form input[type="tel"],
+        .buddypress-wrap .standard-form input[type="time"],
+        .buddypress-wrap .standard-form input[type="url"],
+        .buddypress-wrap .standard-form input[type="week"],
+        .buddypress-wrap .standard-form select,
+        .buddypress-wrap .standard-form input[type="password"],
+        .buddypress-wrap .standard-form [data-bp-search] input[type="search"],
+        .buddypress-wrap .standard-form [data-bp-search] input[type="text"],
+        .buddypress-wrap .standard-form .groups-members-search input[type="search"],
+        .buddypress-wrap .standard-form .groups-members-search input[type="text"],
+        body.personal.attachments #bp-media-library .media-toolbar-primary .components-select-control__input {
+            font-size: 16px;
+        }
+    }
+}
+
 
 /*--------------------------------------------------------------
 # rtMedia Specific
