--- a/assets/css/src/_forms.css
+++ b/assets/css/src/_forms.css
@@ -155,3 +155,26 @@ select {
     padding: 0 12px;
     color: inherit;
 }
+
+@supports (-webkit-touch-callout: none) {
+    @media (hover: none) and (pointer: coarse) {
+        input[type="text"],
+        input[type="email"],
+        input[type="url"],
+        input[type="password"],
+        input[type="search"],
+        input[type="number"],
+        input[type="tel"],
+        input[type="date"],
+        input[type="month"],
+        input[type="week"],
+        input[type="time"],
+        input[type="datetime"],
+        input[type="datetime-local"],
+        select,
+        textarea,
+        .menu-icons-wrapper #searchform input[type=search] {
+            font-size: 16px;
+        }
+    }
+}
